--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'EB Garamond', serif;
     margin: 0;
     scroll-behavior: smooth;
 }
