--- a/main.css
+++ b/main.css
@@ -60,6 +60,15 @@ footer{
     
 }
 
+footer a{
+    text-decoration: none;
+    color: white;
+}
+
+footer a:hover{
+    color: goldenrod;
+}
+
 #footer{
     display: flex;
     justify-content: space-evenly;
