lil changes in the investment css

--- a/investment-programs.css
+++ b/investment-programs.css
@@ -61,6 +61,7 @@ section a:hover{
         margin: 1.5rem auto;
         width: 75%;
         padding-bottom: 1.7rem;
+        padding-top: 1.6rem;
     }
 
     section div>div{
