--- a/home.css
+++ b/home.css
@@ -131,6 +131,10 @@ aside{
 
 
 
-@media (max-width: 800px) {
-    
+@media (max-width: 700px) {
+    header{
+        
+        height: 90vh;
+        
+    }
 }
