--- a/home.css
+++ b/home.css
@@ -131,7 +131,36 @@ aside{
 
 
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
+    header{
+        
+        height: 85vh;
+        
+    }
+
+    .main-1{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-1-1{
+        width: 100%;
+    }
+
+    .main-1-2{
+        width: 100%;
+        font-weight: bold;
+        font-size: 1.4rem;
+    }
+
+    .main-1-2 p {
+        margin-left: 0;
+      }
+}
+
+
+
+@media (max-width: 550px) {
     header{
         
         height: 100vh;
