--- a/home.css
+++ b/home.css
@@ -156,6 +156,35 @@ aside{
     .main-1-2 p {
         margin-left: 0;
       }
+
+      aside{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .aside{
+        width: 100%;
+    }
+
+    #aside-1{
+        display: flex;
+        width: 75%;
+    }
+
+    #aside-2{
+        display: flex;
+        width: 75%;
+    }
+
+    #aside-3{
+        display: flex;
+        width: 75%;
+    }
+
+    .aside--1{
+        margin: 0 1rem;
+    }
 }
 
 
@@ -165,5 +194,22 @@ aside{
         
         height: 100vh;
         
+    }
+
+    aside{
+        display: flex;
+        flex-direction: column;
+    }
+
+    #aside-1{
+        display:inline;
+    }
+
+    #aside-2{
+        display:inline;
+    }
+
+    #aside-3{
+        display:inline;
     }
 }
