changes in the home page

--- a/home.css
+++ b/home.css
@@ -162,20 +162,6 @@ aside{
     }
     
     .aside{
-        width: 100%;
-    }
-
-    #aside-1{
-        display: flex;
-        width: 75%;
-    }
-
-    #aside-2{
-        display: flex;
-        width: 75%;
-    }
-
-    #aside-3{
         display: flex;
         width: 75%;
     }
@@ -197,15 +183,7 @@ aside{
         flex-direction: column;
     }
 
-    #aside-1{
-        display:inline;
-    }
-
-    #aside-2{
-        display:inline;
-    }
-
-    #aside-3{
+    .aside{
         display:inline;
     }
 }
