--- a/home.css
+++ b/home.css
@@ -169,6 +169,15 @@ aside{
     .aside--1{
         margin: 0 1rem;
     }
+
+    #motivational{
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),  url(./photos/dubai\ 2nd.jpg);
+            color: white;
+            font-size: 1.3rem;
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+    }
 }
 
 
