--- a/home.css
+++ b/home.css
@@ -177,6 +177,7 @@ aside{
             font-size: 1.3rem;
             background-size: cover;
             background-position: center;
+            padding: .9rem;
     }
 }
 
