scroll to top function

--- a/main.css
+++ b/main.css
@@ -79,7 +79,20 @@ body{
     color: goldenrod;
 }
 
+.button{
+  color: goldenrod;
+  font-size: 3rem;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  cursor: pointer;
+}
 
+.button:hover{
+    color:  black;
+    border-radius: 50%;
+    background-color: goldenrod;
+}
 
 
 
