--- a/main.css
+++ b/main.css
@@ -88,7 +88,7 @@ body{
   cursor: pointer;
 }
 
-.button:hover{
+.button:active{
     color:  black;
     border-radius: 50%;
     background-color: goldenrod;
