--- a/main.css
+++ b/main.css
@@ -58,6 +58,17 @@ body{
     border-radius: 2px;
 }
 
+.menu-toggle-btn{
+    color: goldenrod;
+    position: relative;
+    padding: .8rem;
+    border-radius: 50%;
+}
+
+.menu-toggle-btn:active{
+    background-color: honeydew;
+}
+
 .nav-5{
     padding: 2rem;
     text-align: center;
