--- a/investment-programs.css
+++ b/investment-programs.css
@@ -60,19 +60,24 @@ section a:hover{
     padding: .6rem .9rem;
 }
 
-aside{
+main{
     background-color: white;
-    font-size: 1rem;
+    font-size: 1.3rem;
     margin: 2rem;
     padding-top: 1rem;
+    text-align: center;
 }
 
-aside a{
+main a{
     padding: .5rem 1rem;
     background-color: black;
     color: blanchedalmond;
     text-decoration: none;
     border-radius: .3rem
+}
+
+main a:hover{
+    padding: .6rem 1.2rem;
 }
 
 
