--- a/investment-programs.css
+++ b/investment-programs.css
@@ -33,8 +33,11 @@ section div > h3{
 }
 
 section div{
+    padding: 1.4rem ;
     text-align: center;
-    border-radius: .5rem
+    border-radius: .5rem;
+    border-top-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
 }
 
  section a{
