--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ body{
  ion-icon{
     color: goldenrod;
     position: relative;
-    font-size: 1.5rem;
+    font-size: 1.9rem;
     padding: .8rem;
     border-radius: 50%;
     display: none;
@@ -109,6 +109,9 @@ ion-icon:active{
     background-color: black;
 }
 
+.nav-bar{
+    display: none;
+}
 
 
 
@@ -139,6 +142,41 @@ footer a:hover{
 
 
 
+.responsive{
+    display: none;
+}
+
+.block{
+    display: block;
+    animation: anni 1.5s forwards;
+    position: relative;
+}
+
+@keyframes anni {
+    0%{
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+
+
+.responsive-menu{
+    background: #000000;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 0;
+}
+
+.responsive-menu > a {
+    color: white;
+    text-decoration: none;
+    margin: 0 1rem;
+    padding: .6rem 0;
+    
+} 
 
 
 
@@ -156,10 +194,33 @@ footer a:hover{
     .nav-2{
         background-color: black;
         justify-content: space-between;
-        padding: 0;
+        padding: 0 1rem;
         padding-top: .5rem;
-        justify-content: center;
+        
     }
+                                                            /* Work area */
+    .nav-bar{
+        display: block;
+        cursor: pointer;
+    }
+
+    .nav-bar:hover{
+        color: goldenrod;
+        opacity: .8;
+    }
+
+    
+    
+    
+    /* .responsive-menu > a:hover{
+        border-bottom: 2px solid goldenrod; 
+        background-color: goldenrod;
+        padding: 0 .2rem;
+        border-radius: 2px;
+    } */
+
+
+
     .nav-2 > p{
         display: none;
     }
@@ -175,7 +236,7 @@ footer a:hover{
 
 
 
-    .nav-4{
+    /* .nav-4{
         display: block;
         background-color: black;
         display: flex;
@@ -184,21 +245,24 @@ footer a:hover{
         font-weight: 800;
         padding: 1.5rem;
 
-    }
+    } */
+
+   
     .nav-3{
         padding-top: 0;
         padding-bottom: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        position: relative;
+        /* display: flex;
+        flex-direction: row;
+        align-items: center; */
+        /* position: absolute;
         right: 0;
-        left: 0;
+        left: 0;  */
     }
 
     .nav-3 a{
         text-align: center;
         margin: 10px 0;
+        display: none;
     }
 
     .nav-3.active{
