--- a/home.css
+++ b/home.css
@@ -1,5 +1,7 @@
-body{
-    font-family: 'Roboto', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap');
+
+  body{
+    font-family: 'Signika Negative', sans-serif;
     margin: 0;
     scroll-behavior: smooth;
 }
