--- a/main.css
+++ b/main.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300&display=swap');
+
 html {
     scroll-behavior: smooth;
+    font-family: 'Signika Negative', sans-serif;
   }
 
 body{
-    font-family: 'EB Garamond', serif;
     margin: 0;
     scroll-behavior: smooth;
 }
